--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Montserrat);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
@@ -10927,6 +10927,21 @@ h1 {
   font-size: 60px !important;
 }
 
+h2 {
+  font-family: "Montserrat";
+  font-weight: bolder;
+  font-size: 40px;
+}
+
+.subheadlines {
+  padding-top: 40%;
+  color: white !important;
+}
+
+.subheadlines:hover {
+  color: white !important;
+}
+
 i {
   color: #006FFF !important;
   font-size: 60px;
@@ -10998,6 +11013,13 @@ footer {
 }
 
 .startheadline {
+  margin: 0 auto;
+}
+
+.bild-quader {
+  height: 400px;
+  width: 400px;
+  background: #006FFF;
   margin: 0 auto;
 }
 
