--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
 
 // Variables
 @import 'variables';
@@ -14,7 +15,8 @@ $background-color: #212121;
 $baseheadline-size: 50px;
 
 body{
-    font-family: 'Montserrat' !important;
+    font-family: 'Montserrat';
+    color: white !important;
 }
 
 .bg-dark{
@@ -24,8 +26,10 @@ body{
 .container-fluid{
     background: $background-color;
     text-align: center;
-    padding-top: 100px;
     min-height: 90vh;
+    padding: 0;
+    margin-top: 0;
+    overflow:  hidden !important;
 }
 
 h1{
@@ -39,12 +43,16 @@ h2{
     font-size: 40px;
 }
 
+.category{
+    color: $primary-color;
+    margin: 60px;
+}
+
 .subheadlines{
     padding-top: 40%;
     color: white !important;
-
     &:hover{
-        color: white !important;
+        text-decoration: underline white !important;
     }
 }
 
@@ -127,4 +135,159 @@ footer{
     width: 400px;
     background: #006FFF;
     margin: 0 auto;
+
+}
+
+.themeheadline{
+    font-family: 'Just Another Hand', cursive !important;
+    color: white !important;
+    font-size: 100px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.bannerpic{
+    background-image: url("../images/Fitness_460099_3840x2400.jpg");
+    margin-top: 0;
+    position: relative;
+    height: 600px;
+    background-size: cover;
+}
+
+.trainingcontainer{
+    margin-top: 0 !important;
+    padding-top: 0 !important;
+
+}
+
+.workout-sec{
+    height: 400px;
+    width: 100%;
+    outline: none !important;
+    border: none;
+    overflow: hidden;
+    position: relative;
+    background: none;
+}
+
+.workout-sec p, .workout-sec h4{
+    color: white;
+    text-align: left;
+    margin-left: 10%;
+}
+
+.workout-sec p{
+    font-size: 30px;
+}
+
+.workout-sec h4{
+    padding-top: 30px;
+    font-size: 60px;
+}
+
+.flipdowncontent{
+    margin-top: 0 !important;
+}
+
+#arme-kasten, #brust-kasten, #ruecken-kasten, #ausdauer-kasten {
+    background: $dark-highlight;
+    width: 100%;
+    margin-left: 0;
+    height: auto;
+    display: none;
+    padding-bottom: 20px;
+    padding-top: 40px;
+}
+
+iframe{
+    margin-top: 20px;
+}
+
+.remember-row{
+    width: 80%;
+    margin-left: 10%;
+}
+
+.remember-tool{
+    width: 80% !important;
+
+    p{
+        color: white;
+        font-size: 20px;
+        margin-left: 10px;
+        margin-top: 10px;
+        display: inline;
+    }
+}
+
+.far .fa-star{
+    cursor: pointer !important;
+    display: inline;
+}
+
+.merkliste-button{
+    border: none !important;
+    background: none !important;
+    outline: none !important;
+}
+
+h5{
+    color: $primary-color;
+    margin: 40px;
+    font-size: 30px;
+}
+
+#arme-background{
+    background-image: url("../images/back-fitness-gym-power-pose.jpg");
+    background-size: cover;
+}
+
+#ausdauer-background{
+    background-image: url("../images/fitness.jpg");
+    background-size: cover;
+}
+
+#brust-background{
+    background-image: url("../images/987915.jpg");
+    background-size: cover;
+}
+
+#back-background{
+    background-image: url("../images/6a1c93ed7c2ba9db9e7859c14ea96762.jpg");
+    background-size: cover;
+}
+
+.profilpicture{
+    height: 300px;
+}
+
+.informationlist{
+    text-align: left !important;
+    color: white;
+
+    li{
+        margin-top: 10px;
+        list-style: none;
+    }
+}
+
+#erfolge, .verwalten{
+    color: $primary-color;
+}
+
+.merkliste-buttons, .upload-button{
+    background: $primary-color;
+    color: white;
+    padding: 10px;
+    outline: none !important;
+    border: none;
+}
+
+.editgroup{
+    color: white !important;
+    font-size: 20px !important;
+}
+
+.profilform{
+    margin-left: 20px !important;
 }
