--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11191,3 +11191,17 @@ h5 {
   margin-left: 20px !important;
 }
 
+.videocontainer,
+.videocontainer2,
+.videocontainer3,
+.videcontainer4 {
+  display: none;
+}
+
+.showit,
+.showit2,
+.showit3,
+.showit4 {
+  display: block;
+}
+
