--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -291,3 +291,11 @@ h5{
 .profilform{
     margin-left: 20px !important;
 }
+
+.videocontainer, .videocontainer2, .videocontainer3, .videcontainer4{
+    display: none;
+}
+
+.showit, .showit2, .showit3, .showit4{
+    display: block;
+}
