--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -299,3 +299,9 @@ h5{
 .showit, .showit2, .showit3, .showit4{
     display: block;
 }
+
+#profilpicture-nav {
+    width: 50px !important;
+    height: 50px !important;
+    border-radius: 80px;
+}
