--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,8 +49,8 @@ h2{
 }
 
 .subheadlines{
-    padding-top: 40%;
     color: white !important;
+    padding-top: 90px;
     &:hover{
         text-decoration: underline white !important;
     }
@@ -131,11 +131,11 @@ footer{
 }
 
 .bild-quader{
-    height: 400px;
+    height: 200px;
     width: 400px;
     background: #006FFF;
-    margin: 0 auto;
-
+    margin: 10px auto;
+    cursor: pointer;
 }
 
 .themeheadline{
