--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11212,3 +11212,29 @@ h5 {
   border-radius: 80px;
 }
 
+.edit_forms {
+  visibility: hidden !important;
+}
+
+#profilbild_verwalten {
+  visibility: hidden !important;
+}
+
+.profilbild_verwalten_form {
+  display: none;
+}
+
+.showforms {
+  visibility: visible !important;
+}
+
+.showforms_alt {
+  display: block;
+}
+
+.bildbeschraenker {
+  width: 400px;
+  height: 400px;
+  overflow: hidden !important;
+}
+
